syntax = "proto3";

import "npproto/ndarray.proto";


// Input data for a FederatedLogpOp
message FederatedLogpOpInput {
    // Multiple input arrays
    repeated npproto.ndarray inputs = 1;
}
// Return value of a FederatedLogpOp
message FederatedLogpOpOutput {
    // Log-potential (must be scalar!)
    npproto.ndarray log_potential = 1;
    // Gradients of log-potential w.r.t. inputs
    repeated npproto.ndarray gradients = 2;
}

service FederatedLogpOp {
    rpc Evaluate(FederatedLogpOpInput) returns (FederatedLogpOpOutput);
    rpc EvaluateStream(stream FederatedLogpOpInput) returns (stream FederatedLogpOpOutput);
}
